modulo inicio sesion

--- a/views/partials/encabezado_publico.ejs
+++ b/views/partials/encabezado_publico.ejs
@@ -1,7 +1,7 @@
 <header class="sticky">
   <div class="enlaces-registro">
     <a href="/registro">Registro</a> |
-    <a href="#">Inicio</a>
+    <a href="/inicio">Inicio</a>
   </div>
   <a href="/" class="logo">Blog de Viajes</a>
   <a href="#" class="button"><span class="icon-home"></span> Inicio</a>
