--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -14,12 +14,47 @@
   <% include ../partials/encabezado_privado %>
 
   <div class="container">
-    <h1>Admin</h1>
+    <h1>Admin - Mis publicaciones</h1>
     <hr>
 
     <div class="row">
 
+      <div class="col-sm-12">
 
+        <% if (mensaje && mensaje.length > 0) { %>
+        <h4><span class="icon-info"></span>
+          <%=mensaje%>
+        </h4>
+        <% } %>
+
+        <table>
+          <thead>
+            <tr>
+              <th>titulo</th>
+              <th>resumen</th>
+              <th>votos</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% publicaciones.forEach( (publicacion) => { %>
+            <tr>
+              <td>
+                <%=publicacion.titulo%>
+              </td>
+              <td>
+                <%=publicacion.resumen%>
+              </td>
+              <td>
+                <%=publicacion.votos%>
+              </td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+
+        <hr>
+        <a class="button" href="/admin/agregar">Agregar Publicación</a>
+      </div>
     </div>
 
   </div>
