funcion editar y eliminar

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -33,6 +33,7 @@
               <th>titulo</th>
               <th>resumen</th>
               <th>votos</th>
+              <th>acciones</th>
             </tr>
           </thead>
           <tbody>
@@ -46,6 +47,16 @@
               </td>
               <td>
                 <%=publicacion.votos%>
+              </td>
+              <td>
+                <a href="/admin/editar/<%=publicacion.id%>"><span class="icon-edit"></span>
+                  Editar
+                </a>
+                |
+                <a href="/admin/procesar_eliminar/<%=publicacion.id%>" onclick="return confirm('¿Está seguro de eliminar: <%=publicacion.titulo%>?')"><span
+                    class="icon-alert"></span>
+                  Eliminar
+                </a>
               </td>
             </tr>
             <% }) %>
