--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,6 +55,16 @@
 
   </div>
 
+  <div class="row">
+    <div class="col-sm-12">
+      <p class="centrado">
+        <a href="/?pagina=<%=pagina-1%>"> << Anterior </a>
+        |
+        <a href="/?pagina=<%=pagina+1%>"> Siguiente >> </a>
+      </p>
+    </div>
+  </div>
+
   <% include ./partials/pie %>
   <script src="javascripts/script.js"></script>
 </body>
