modulo pagina autores

--- a/views/partials/encabezado_publico.ejs
+++ b/views/partials/encabezado_publico.ejs
@@ -4,6 +4,6 @@
     <a href="/inicio">Inicio</a>
   </div>
   <a href="/" class="logo">Blog de Viajes</a>
-  <a href="#" class="button"><span class="icon-home"></span> Inicio</a>
-  <a href="#" class="button"><span class="icon-user"></span> Autores</a>
+  <a href="/" class="button"><span class="icon-home"></span> Inicio</a>
+  <a href="/autores" class="button"><span class="icon-user"></span> Autores</a>
 </header>
